--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1",
+    "react-hook-form": "7.45.2",
     "react-hot-toast": "^2.4.1",
-    "react-number-format": "^5.3.1",
+    "react-number-format": "5.2.2",
     "react-router-dom": "^6.16.0",
     "swiper": "^10.3.0",
     "tailwind-merge": "^1.14.0",
